--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^9.5.4",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "xpath": "0.0.32"
   }
 }
